[bdist_wheel]
universal=1

[metadata]
description_file = README.md

[flake8]
ignore=E203, W503
max-line-length=1000
exclude=pyEX/tests/
per-file-ignores=
    pyEX/__init__.py:F401
    pyEX/alternative/__init__.py:F401
    pyEX/cryptocurrency/__init__.py:F401
    pyEX/fx/__init__.py:F401
    pyEX/refdata/__init__.py:F401
    pyEX/stats/__init__.py:F401
    pyEX/stocks/__init__.py:F401
    pyEX/studies/technicals/__init__.py:F401