[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=1000
exclude=pyEX/tests/
per-file-ignores=
    pyEX/__init__.py:F401,F403
    pyEX/account/__init__.py:F401
    pyEX/alternative/__init__.py:F401
    pyEX/commodities/__init__.py:F401
    pyEX/common/__init__.py:F401,F403
    pyEX/cryptocurrency/__init__.py:F401
    pyEX/economic/__init__.py:F401
    pyEX/files/__init__.py:F401
    pyEX/futures/__init__.py:F401
    pyEX/fx/__init__.py:F401
    pyEX/mortgage/__init__.py:F401
    pyEX/options/__init__.py:F401
    pyEX/platform/__init__.py:F401
    pyEX/premium/__init__.py:F401,F403
    pyEX/premium/refinitiv/__init__.py:F401,F403
    pyEX/rates/__init__.py:F401
    pyEX/refdata/__init__.py:F401,F403
    pyEX/refdata/symbols/__init__.py:F401,F403
    pyEX/stats/__init__.py:F401
    pyEX/stocks/__init__.py:F401
    pyEX/studies/__init__.py:F401,F403
    pyEX/studies/technicals/__init__.py:F401
    pyEX/timeseries/__init__.py:F401
    pyEX/treasuries/__init__.py:F401
